# CXX

./: '  .gitmodules  CMakeLists.txt  README.md  conanfile.txt
.cache/clangd/index/: AddingImages.cpp.32B93964DDAE1B56.idx  CaptureVideo.cpp.45E138E13710EA37.idx  DisplayPicture.cpp.75262560BC69501B.idx  bench.cpp.8EDB59A1631C9E61.idx  eig.cpp.CAD1D94E56CE4DC9.idx  imgui.cpp.3E9839C799480B14.idx  imgui.cpp.3F5DE10CF7D01B0B.idx  md5.cpp.052E7ADC08F6BD29.idx  nlohm.cpp.D17118BD556D6CA0.idx  options.cpp.EC33C2F4CBBE7F5F.idx  options_2.cpp.F36E52CB0EC33C57.idx  simple.cpp.657E171E76A47EA9.idx  simple_example.cpp.720AC714A8FD108E.idx  simple_test_catch.cpp.6E8B52C1C57BE6FF.idx  spd_log_file.cpp.7F46EE4669CAFE39.idx  spdlog.cpp.AA59A41E493114B0.idx  spdlog_std_obj.cpp.024CE9A3F9C08E7F.idx  yaml.cpp.7A0051043ED0B7C5.idx
apps/OpenCV/: CaptureVideo.cpp
cmake/: CMakeCache.txt  CompilerWarnings.cmake
scripts/: CaptureVideo.py
src/Eigen/: CMakeLists.txt  eig.cpp
src/GTests/: GTest.cpp
src/OpenCV/: AddingImages.cpp  CMakeLists.txt  CaptureVideo.cpp  DisplayPicture.cpp
src/SpdLog/: spd_log_file.cpp  spdlog.cpp  spdlog_std_obj.cpp
src/Study/Eigen/: CMakeLists.txt  simple_example.cpp
src/Study/OpenCV/: CMakeLists.txt
src/Study/boost/: CMakeLists.txt
src/Study/pybind11/: CMakeLists.txt  pybind_function.cpp
src/Study/spdlog/: CMakeLists.txt  file.cpp
src/Study/xtensor/: CMakeLists.txt  simple_ex.cpp
src/boost/: CMakeLists.txt  apples_oranges.cfg  options.cpp  options_2.cpp  type_name.cpp
src/imgui/: CMakeLists.txt  sfml_opencv.cpp  sfml_simple_example.cpp
src/xtensor/: CMakeLists.txt
src/yaml-cpp/: simple_example.cpp  yaml.cpp
tests/: CMakeLists.txt
tests/Catch2/: simple_test_catch.cpp
tests/GoogleTest/: simple.cpp
